--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,3 @@
-<%= dsfr_header logo_text: t("global.sponsor"), title: t("global.service_name"), tagline: t("global.service_description") do |header| %>
+<%= dsfr_header logo_text: t("global.sponsor_html"), title: t("global.service_name"), tagline: t("global.service_description") do |header| %>
   <%= header.with_direct_link_simple title: "Accueil", path: root_path %>
 <% end %>
