--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,3 +1,5 @@
 <%= dsfr_header logo_text: t("global.sponsor_html"), title: t("global.service_name"), tagline: t("global.service_description") do |header| %>
-  <%= header.with_direct_link_simple title: "Accueil", path: root_path %>
+  <%= header.with_direct_link_simple title: "Accueil", path: root_path, active: current_page?(root_path) %>
+  <%= header.with_direct_link_simple title: "Tous les sites", path: sites_path, active: current_page?(controller: :sites, action: :index) %>
+  <%= header.with_direct_link_simple title: "Ajouter un site", path: new_site_path, active: current_page?(controller: :sites, action: :new) %>
 <% end %>
