--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -4,7 +4,7 @@
       <div class="fr-footer__brand fr-enlarge-link">
         <a href="/" title="Retour à l’accueil du site - <%= t("global.service_name") %>">
           <p class="fr-logo">
-            <%= t("global.service_name") %>
+            <%= t("global.sponsor_html") %>
           </p>
         </a>
       </div>
