--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -2,17 +2,18 @@
   <% t.with_head do %>
     <tr>
       <th scope="col"><%= Site.human(:url) %></th>
+      <th scope="col"><%= Site.human(:detail) %></th>
       <% Check.classes.collect(&:table_header).each do |header| %>
         <th scope="col" class="fr-cell--center"><%= header %></th>
       <% end %>
       <th scope="col"><%= Site.human(:last_audit_at) %></th>
-      <th scope="col"><%= t("shared.actions") %></th>
     </tr>
   <% end %>
   <% t.with_body do %>
     <% @sites.each do |site| %>
       <tr>
-        <td><%= link_to site.url_without_scheme, site %></td>
+        <td><%= link_to site.url_without_scheme, site.url, target: :_blank %></td>
+        <td><%= link_to Site.human(:view), site, title: Site.human(:view_name, name: site.name) %></td>
         <% site.audit.all_checks.each do |check| %>
           <td class="fr-cell--center"><%= badge check.to_badge, tooltip: true %></td>
         <% end %>
@@ -23,7 +24,6 @@
             (<%= time_ago site.audit.checked_at %>)
           <% end %>
         </td>
-        <td><%= link_to "Voir le site", site.url, target: :_blank %></td>
       </tr>
     <% end %>
   <% end %>
