--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -1,20 +1,34 @@
-<p>
-  <strong><%= Site.human :url %> :</strong>
-  <%= link_to @site.url, @site.url, target: :_blank %>
-</p>
-<% if @site.audit.checked_at %>
-<p>
-  <strong><%= Site.human :last_audit_at %> :</strong>
-  <%= l @site.audit.checked_at, format: :long %>
-  (<%= time_ago @site.audit.checked_at %>).
-</p>
-<% end %>
-<% @site.audit.all_checks.each do |check| %>
-  <p>
-    <strong><%= check.human_type %> :</strong>
-    <%= badge check.to_badge %>
-  </p>
-<% end %>
+<div class="fr-grid-row">
+  <div class="fr-col-12 fr-col-md-8">
+    <p>
+      <strong><%= Site.human :url %> :</strong>
+      <%= link_to @site.url, @site.url, target: :_blank %>
+    </p>
+    <p>
+      <strong><%= Audit.human :created_at %> :</strong>
+      <%= l @audit.created_at, format: :long %>
+      (<%= time_ago @audit.created_at %>).
+    </p>
+    <% if @audit.checked_at %>
+      <p>
+        <strong><%= Audit.human :checked_at %> :</strong>
+        <%= l @audit.checked_at, format: :long %>
+        (<%= time_ago @audit.checked_at %>).
+      </p>
+      <% @audit.all_checks.each do |check| %>
+        <p>
+          <strong><%= check.human_type %> :</strong>
+          <%= badge check.to_badge %>
+        </p>
+      <% end %>
+    <% else %>
+      <p>
+        <strong><%= Audit.human(:status) %> :</strong>
+        <%= Audit.human("audit/status.pending") %>
+      </p>
+    <% end %>
+  </div>
+</div>
 
 <br>
 
