--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -40,6 +40,7 @@
 <br>
 
 <div class="fr-btn-group fr-mb-2w">
+  <%= button_to Audit.human(:new), [@site, :audits], method: :post, class: "fr-btn" %>
   <%= button_to Site.human(:delete), @site, method: :delete, class: "fr-btn fr-btn--tertiary", form: { data: { turbo_confirm: t("shared.confirm") } } %>
   <%= link_to t("shared.back_to_list"), { controller: :sites, action: :index }, class: "fr-btn fr-btn--tertiary-no-outline" %>
 </div>
