Display audit details on show page

--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -4,23 +4,13 @@
       <strong><%= Site.human :url %> :</strong>
       <%= link_to @site.url, @site.url, target: :_blank %>
     </p>
-    <p>
-      <strong><%= Site.human :created_at %> :</strong>
-      <%= time_tag @audit.created_at, l(@audit.created_at, format: :long) %>
-      (<%= time_ago @audit.created_at %>).
-    </p>
     <% if @audit.checked_at %>
       <p>
         <strong><%= Audit.human :checked_at %> :</strong>
         <%= time_tag @audit.checked_at, l(@audit.checked_at, format: :long) %>
         (<%= time_ago @audit.checked_at %>).
       </p>
-      <% @audit.all_checks.each do |check| %>
-        <p>
-          <strong><%= check.human_type %> :</strong>
-          <%= badge check.to_badge %>
-        </p>
-      <% end %>
+      <%= render(partial: @audit.all_checks, as: :check) %>
     <% else %>
       <p>
         <strong><%= Audit.human(:status) %> :</strong>
