--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "dsfr.min", "application-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "utility/dsfr-utility.min", "application-turbo-track": "reload" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
 
     <link rel="icon" href="/icon.png" type="image/png">
