--- a/app/views/checks/_run_axe_on_homepage.html.erb
+++ b/app/views/checks/_run_axe_on_homepage.html.erb
@@ -4,11 +4,12 @@
 
   <% if check.passed? %>
     <ul>
-      <li><strong><%= check.human(:passes) %></strong> : <%= number_to_human(check.passes) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:violations) %></strong> : <%= number_to_human(check.failures) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:failure_rate) %></strong> : <%= number_to_percentage(check.failure_rate, precision: 2, strip_insignificant_zeros: true) || check.human(:unknown) %></li>
-      <li><strong><%= check.human(:incomplete) %></strong> : <%= number_to_human(check.incomplete) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:checks_total) %></strong> : <%= number_to_human(check.checks_total) || check.human(:unknown) %></li>
       <li><strong><%= check.human(:inapplicable) %></strong> : <%= number_to_human(check.inapplicable) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:incomplete) %></strong> : <%= number_to_human(check.incomplete) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:violations) %></strong> : <%= number_to_human(check.violations) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:passes) %></strong> : <%= number_to_human(check.passes) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:success_rate) %></strong> : <%= check.human_success_rate %></li>
     </ul>
   <% end %>
 </div>
