feat: Display compliance rate decimals if available

--- a/app/views/checks/_analyze_accessibility_page.html.erb
+++ b/app/views/checks/_analyze_accessibility_page.html.erb
@@ -4,7 +4,7 @@
 
   <% if check.passed? %>
     <ul>
-      <li><strong><%= check.human(:compliance_rate) %></strong> : <%= number_to_percentage(check.compliance_rate, precision: 0) || check.human(:unknown) %></li>
+      <li><strong><%= check.human(:compliance_rate) %></strong> : <%= number_to_percentage(check.compliance_rate, , precision: 2, strip_insignificant_zeros: true) || check.human(:unknown) %></li>
       <li><strong><%= check.human(:audit_date) %></strong> :
         <% if check.audit_date %>
           <%= l(check.audit_date.to_date) %>
