--- a/app/components/dsfr/table_component.html.erb
+++ b/app/components/dsfr/table_component.html.erb
@@ -25,5 +25,14 @@
         <%= pagination %>
       </div>
     <% end %>
+    <% if footer_actions? %>
+      <div class="fr-table__footer--end">
+        <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-md fr-btns-group--icon-left">
+          <% footer_actions.each do |action| %>
+            <li><%= action %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
   </div>
 </div>
