Allow exporting site data to CSV

--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -29,6 +29,9 @@
       </tr>
     <% end %>
   <% end %>
+  <% t.with_footer_action do %>
+    <%= link_to Site.human(:export_to_csv), url_for(format: :csv), class: "fr-btn fr-icon-file-download-fill", data: { "turbo-prefetch": false } %>
+  <% end %>
 <% end %>
 
 <%= link_to "Ajouter un site", { action: :new }, class: "fr-btn" %>
