--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -8,7 +8,7 @@
 
 <h2><%= Site.human(:import) %></h2>
 <%= form_with(model: upload || SiteUpload.new) do |f| %>
-  <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv" %>
+  <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv", data: { controller: "dragover", action: "dragover->dragover#enter dragleave->dragover#leave drop->dragover#drop" } %>
 
   <%= f.submit t("shared.upload"), name: nil, class: "fr-btn", data: { disable_with: t("shared.uploading") } %>
 <% end %>
