--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: site) do |f| %>
   <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) %>
 
-  <%= f.submit t("shared.save"), name: nil, class: "fr-btn", data: { disable_with: t("shared.saving") } %>
+  <%= f.submit t("shared.add"), name: nil, class: "fr-btn", data: { disable_with: t("shared.saving") } %>
 <% end %>
 
 <%= or_separator %>
@@ -10,5 +10,5 @@
 <%= form_with(model: upload || SiteUpload.new) do |f| %>
   <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv", data: { controller: "dragover", action: "dragover->dragover#enter dragleave->dragover#leave drop->dragover#drop" } %>
 
-  <%= f.submit t("shared.upload"), name: nil, class: "fr-btn", data: { disable_with: t("shared.uploading") } %>
+  <%= f.submit t("shared.import"), name: nil, class: "fr-btn", data: { disable_with: t("shared.importing") } %>
 <% end %>
