feat: Move table component attributes to the wrapper

--- a/app/components/dsfr/table_component.html.erb
+++ b/app/components/dsfr/table_component.html.erb
@@ -1,8 +1,8 @@
-<div class="<%= table_classes %>">
+<div <%= tag.attributes wrapper_attributes %>>
   <div class="fr-table__wrapper">
     <div class="fr-table__container">
       <div class="fr-table__content">
-        <table <%= tag.attributes html_attributes %>>
+        <table>
           <caption class="fr-sr-only">
             <%= caption %>
           </caption>
