--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -12,7 +12,7 @@
   <% t.with_body do %>
     <% @sites.each do |site| %>
       <tr>
-        <td class="fr-cell--center"><%= link_to(site, title: Site.human(:view_name, name: site.name), class: "fr-link fr-icon-article-line fr-link--icon-left link--icon-only") { tag.span(class: "fr-sr-only") { Site.human(:view) } } %></td>
+        <td class="fr-cell--center"><%= link_icon(:article, site, title: Site.human(:view_name, name: site.name), line: true, side: :left, class: "link--icon-only") { tag.span(class: "fr-sr-only") { Site.human(:view) } } %></td>
         <td><%= link_to site.url_without_scheme, site.url, target: :_blank %></td>
         <% site.audit.all_checks.each do |check| %>
           <td class="fr-cell--center"><%= check.blocked? || check.pending? ? "-" : badge(check.to_badge, tooltip: true) %></td>
@@ -30,6 +30,6 @@
     <% end %>
   <% end %>
   <% t.with_footer_action do %>
-    <%= link_to Site.human(:export_to_csv), url_for(format: :csv), class: "fr-btn fr-icon-file-download-fill", data: { "turbo-prefetch": false } %>
+    <%= link_icon "file-download", Site.human(:export_to_csv), url_for(format: :csv), btn: :secondary, data: { "turbo-prefetch": false } %>
   <% end %>
 <% end %>
