--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <link rel="apple-touch-icon" href="/icon.png">
 
     <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "dsfr.nomodule.min.js", nomodule: true %>
+    <%= javascript_include_tag "dsfr.nomodule.min", nonce: true %>
     <%= yield :head %>
   </head>
 
