style: Adjust spacing in main layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
     <%= render "shared/header" %>
 
     <div class="fr-container">
-      <main class="fr-py-2w" id="main">
+      <main class="fr-pt-5w fr-mb-5w" id="main">
         <% if content_for?(:center_layout) %>
           <div class="fr-container fr-mt-8v fr-mt-md-14v fr-mb-2v fr-mb-md-8v <%= "fr-background-alt--grey fr-py-10v fr-py-md-14v" if content_for?(:boxed_layout) %>">
             <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--center">
