--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -15,7 +15,7 @@
         <td class="fr-cell--center"><%= link_icon(:article, site, title: Site.human(:view_name, name: site.name), line: true, side: :left, class: "link--icon-only") { tag.span(class: "fr-sr-only") { Site.human(:view) } } %></td>
         <td><%= link_to site.url_without_scheme, site.url, target: :_blank %></td>
         <% site.audit.all_checks.each do |check| %>
-          <td class="fr-cell--center"><%= check.blocked? || check.pending? ? "-" : badge(check.to_badge, tooltip: true) %></td>
+          <td class="fr-cell--center"><%= check.blocked? || check.pending? ? "-" : badge(check.to_badge, tooltip: check.tooltip?) %></td>
         <% end %>
         <td>
           <% if checked_at = site.audit.checked_at %>
