--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -7,7 +7,7 @@
 <%= or_separator %>
 
 <h2><%= Site.human(:import) %></h2>
-<%= form_with(model: upload || SiteUpload.new) do |f| %>
+<%= form_with(model: upload || SiteUpload.new, url: upload_sites_url) do |f| %>
   <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv", data: { controller: "dragover", action: "dragover->dragover#enter dragleave->dragover#leave drop->dragover#drop" } %>
 
   <%= f.submit t("shared.import"), name: nil, class: "fr-btn", data: { disable_with: t("shared.importing") } %>
