feat: Display current commit SHA in footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -46,6 +46,9 @@
         <li class="fr-footer__bottom-item">
           <%= link_to "Gestion des cookies", cookies_path, class: "fr-footer__bottom-link" %>
         </li>
+        <li class="fr-footer__bottom-item">
+          <%= link_to current_git_commit.first(10), commit_url(current_git_commit), class: "fr-footer__bottom-link", target: :_blank %>
+        </li>
       </ul>
       <div class="fr-footer__bottom-copy">
         <p>Sauf mention contraire, tous les contenus de ce site sont sous
