--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -1,38 +1,42 @@
-<%= dsfr_table(caption: "Liste des sites") do |t| %>
-  <% hidden_fields = params.expect(sort: {}).to_h.transform_keys { |key| :"sort[#{key}]" } %>
-  <% t.with_search(url: url_for, name: "search[q]", value: params.dig(:search, :q), hidden_fields:) %>
-  <% t.with_head do %>
-    <tr>
-      <th scope="col"><%= Site.human(:detail) %></th>
-      <th scope="col" class="fr-cell--sort" <%= aria_sort(:url) %>><%= sortable_header Site.human(:url), :url %></th>
-      <% Check.classes.each do |klass| %>
-        <th scope="col" class="fr-cell--center" title="<%= klass.human_type %>"><%= klass.table_header %></th>
-      <% end %>
-      <th scope="col" class="fr-cell--sort" <%= aria_sort(:checked_at) %>><%= sortable_header Site.human(:last_audit_at), :checked_at %></th>
-    </tr>
-  <% end %>
-  <% t.with_body do %>
-    <% @sites.each do |site| %>
+<% if @sites.load.any? %>
+  <%= dsfr_table(caption: "Liste des sites") do |t| %>
+    <% hidden_fields = params.expect(sort: {}).to_h.transform_keys { |key| :"sort[#{key}]" } %>
+    <% t.with_search(url: url_for, name: "search[q]", value: params.dig(:search, :q), hidden_fields:) %>
+    <% t.with_head do %>
       <tr>
-        <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name), site, title: Site.human(:view_name, name: site.name), line: true, side: :left, sr_only: true) %></td>
-        <td><%= link_to site.url_without_scheme.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme.length > 35 ? site.url_without_scheme : nil %></td>
-        <% site.audit.all_checks.each do |check| %>
-          <td class="fr-cell--center"><%= badge(check.to_badge, tooltip: check.tooltip?) %></td>
+        <th scope="col"><%= Site.human(:detail) %></th>
+        <th scope="col" class="fr-cell--sort" <%= aria_sort(:url) %>><%= sortable_header Site.human(:url), :url %></th>
+        <% Check.classes.each do |klass| %>
+          <th scope="col" class="fr-cell--center" title="<%= klass.human_type %>"><%= klass.table_header %></th>
         <% end %>
-        <td>
-          <% if checked_at = site.audit.checked_at %>
-            <% local_time = checked_at.in_time_zone %>
-            <%= time_tag local_time, l(local_time, format: :compact), title: l(local_time, format: :long) %>
-            <br>
-            (<%= time_ago local_time %>)
-          <% else %>
-            <%= Audit.human("audit/status.pending") %>
-          <% end %>
-        </td>
+        <th scope="col" class="fr-cell--sort" <%= aria_sort(:checked_at) %>><%= sortable_header Site.human(:last_audit_at), :checked_at %></th>
       </tr>
     <% end %>
+    <% t.with_body do %>
+      <% @sites.each do |site| %>
+        <tr>
+          <td class="fr-cell--center"><%= link_icon(:article, Site.human(:view_name, name: site.name), site, title: Site.human(:view_name, name: site.name), line: true, side: :left, sr_only: true) %></td>
+          <td><%= link_to site.url_without_scheme.truncate(35, separator: /\W/), site.url, target: :_blank, title: site.url_without_scheme.length > 35 ? site.url_without_scheme : nil %></td>
+          <% site.audit.all_checks.each do |check| %>
+            <td class="fr-cell--center"><%= badge(check.to_badge, tooltip: check.tooltip?) %></td>
+          <% end %>
+          <td>
+            <% if checked_at = site.audit.checked_at %>
+              <% local_time = checked_at.in_time_zone %>
+              <%= time_tag local_time, l(local_time, format: :compact), title: l(local_time, format: :long) %>
+              <br>
+              (<%= time_ago local_time %>)
+            <% else %>
+              <%= Audit.human("audit/status.pending") %>
+            <% end %>
+          </td>
+        </tr>
+      <% end %>
+    <% end %>
+    <% t.with_footer_action do %>
+      <%= link_icon "file-download", Site.human(:export_to_csv), url_for(format: :csv), btn: :secondary, data: { "turbo-prefetch": false } %>
+    <% end %>
   <% end %>
-  <% t.with_footer_action do %>
-    <%= link_icon "file-download", Site.human(:export_to_csv), url_for(format: :csv), btn: :secondary, data: { "turbo-prefetch": false } %>
-  <% end %>
+<% else %>
+  <%= dsfr_alert(type: :info, title: Site.human(:empty_collection)) %>
 <% end %>
