--- a/app/views/sites/new.html.erb
+++ b/app/views/sites/new.html.erb
@@ -1,2 +1,12 @@
 <% use_centered_layout %>
-<%= render "form", site: @site, upload: @upload %>
+
+<%= render "form", site: @site || Site.new %>
+
+<%= or_separator %>
+
+<h2><%= Site.human(:import) %></h2>
+<%= form_with(model: @upload || SiteUpload.new, url: upload_sites_url) do |f| %>
+  <%= f.dsfr_file_field :file, label: Site.human(:file), required: true, hint: Site.human(:file_hint), class: "fr-mb-4w", accept: ".csv", data: { controller: "dragover", action: "dragover->dragover#enter dragleave->dragover#leave drop->dragover#drop" } %>
+
+  <%= f.submit t("shared.import"), name: nil, class: "fr-btn", data: { disable_with: t("shared.importing") } %>
+<% end %>
