--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -7,9 +7,9 @@
     <% if @audit.checked_at %>
       <p>
         <strong><%= Audit.human :checked_at %> :</strong>
-        <% local_time = @audit.checked_at.in_time_zone %>
-        <%= time_tag local_time, l(local_time, format: :long) %>
-        (<%= time_ago local_time %>).
+        <% checked_at = @audit.checked_at %>
+        <%= time_tag checked_at, l(checked_at, format: :long) %>
+        (<%= time_ago checked_at %>).
       </p>
       <%= render(partial: @audit.all_checks, as: :check) %>
     <% else %>
