--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: site || Site.new) do |f| %>
-  <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) if site.new_record? %>
+  <%= f.dsfr_input_field :url, :text_field, type: :url, required: true, autofocus: true, hint: Site.human(:url_hint) %>
   <%= f.dsfr_text_field :name, autofocus: site.persisted?, hint: Site.human(:name_hint) %>
 
   <%= f.submit t("shared.#{site.persisted? ? :save : :add}"), name: nil, class: "fr-btn", data: { disable_with: t("shared.saving") } %>
